# nunuclaw

./: .gitignore  LICENSE  README.md  pyproject.toml
nunuclaw/: __init__.py  config.py  main.py
nunuclaw/delivery/: __init__.py  formatter.py  tts.py
nunuclaw/engine/: __init__.py  executor.py  planner.py  verifier.py
nunuclaw/engine/models/: __init__.py  anthropic.py  base.py  groq.py  ollama.py  router.py
nunuclaw/gateway/: __init__.py  message.py  router.py
nunuclaw/gateway/channels/: __init__.py  base.py  cli.py
nunuclaw/memory/: __init__.py  history.py  profile.py  store.py
nunuclaw/skills/: __init__.py
nunuclaw/tools/: __init__.py  base.py  calculator.py  file_manager.py  registry.py  scheduler.py  web_search.py
nunuclaw/understanding/: __init__.py  complexity.py  intent.py  language.py
tests/: sandbox_test.py  test_core.py
