[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nunuclaw"
version = "0.1.0"
description = "Universal, lightweight, autonomous AI assistant — SLM→LLM cost-intelligent routing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Aswini", email = "aswini@nunuclaw.dev" }]
keywords = ["ai", "assistant", "autonomous", "slm", "llm", "multilingual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "anthropic>=0.43.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
docs = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.0",
    "python-pptx>=1.0.0",
]
voice = [
    "openai-whisper>=20240930",
    "edge-tts>=7.0.0",
]
telegram = [
    "python-telegram-bot>=21.0",
]

[project.scripts]
nunuclaw = "nunuclaw.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
